--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -63,6 +63,15 @@
    "manifestFile": "lake-manifest.json",
    "inputRev": null,
    "inherited": false,
+   "configFile": "lakefile.lean"},
+  {"url": "https://github.com/hrmacbeth/duper",
+   "type": "git",
+   "subDir": null,
+   "rev": "500aecaa3bbe6818f82611c84ac4dfff64ad5b3f",
+   "name": "Duper",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "main",
+   "inherited": false,
    "configFile": "lakefile.lean"}],
  "name": "«proofs-S24»",
  "lakeDir": ".lake"}
